<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".GoalViewFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            tools:context=".GoalOverViewActivity">

            <TextView
                android:id="@+id/textGoalOverview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="20dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:text="@string/goal_overview"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimary"
                android:textSize="32sp" />


            <TextView
                android:id="@+id/textView2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="3dp"
                android:text="Het Doel"
                android:textSize="20dp"
                android:textColor="@android:color/white"
                android:background="@color/colorPrimary"
                />

            <TextView
                android:id="@+id/textViewGoal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="20dp"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="3dp"
                android:text="@string/Where_do_you"
                android:textColor="@android:color/black"
                android:textStyle="italic"
                />

            <TextView
                android:id="@+id/textViewWhere"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="20dp"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="3dp"
                android:text="@string/wanneer"
                android:textColor="@android:color/black"
                android:textStyle="italic"
                />

            <TextView
                android:id="@+id/textViewWhen"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="6dp"
                android:text="TextView"
                android:textColor="@android:color/black"
                />

            <TextView
                android:id="@+id/textView6"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="3dp"
                android:text="@string/hoe"
                android:textColor="@android:color/black"
                android:textStyle="italic"
                />

            <TextView
                android:id="@+id/textViewHow"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="6dp"
                android:text="TextView"
                android:textColor="@android:color/black" />

            <!--<TextView-->
            <!--android:id="@+id/textView7"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="@string/precies"-->
            <!--android:textColor="@android:color/white"-->
            <!--android:layout_marginTop="10dp"-->
            <!--android:layout_marginLeft="8dp"-->
            <!--android:layout_marginRight="5dp"-->
            <!--android:layout_marginBottom="3dp"            />-->

            <!--<TextView-->
            <!--android:id="@+id/textViewPrecise"-->
            <!--android:layout_width="match_parent"-->
            <!--android:layout_height="wrap_content"-->
            <!--android:text="TextView"-->
            <!--android:textColor="@android:color/white"-->
            <!--android:layout_marginTop="6dp"-->
            <!--android:layout_marginLeft="8dp"-->
            <!--android:layout_marginRight="5dp"-->
            <!--android:layout_marginBottom="6dp"/>-->

            <TextView
                android:id="@+id/textView8"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="3dp"
                android:text="@string/details"
                android:textColor="@android:color/black"
                android:textStyle="italic"
                />

            <TextView
                android:id="@+id/textViewMore"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="20dp"
                android:text="TextView"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/textView10"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="3dp"
                android:text="@string/your_positive_thought"
                android:textColor="@android:color/white"
                android:textSize="20dp"
                android:background="@color/colorPrimary"

                />

            <TextView
                android:id="@+id/textViewPositiveThought"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="20dp"
                android:text="TextView"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/textViewPositiveThought2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="6dp"
                android:text="TextView"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/textViewPositiveThought3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="6dp"
                android:text="TextView"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/textViewPositiveThought4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="6dp"
                android:text="TextView"
                android:textColor="@android:color/black" />


            <TextView
                android:id="@+id/textViewPositiveThought5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="6dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="6dp"
                android:text="TextView"
                android:textColor="@android:color/black" />

            <TextView
                android:id="@+id/textView11"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="8dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="5dp"
                android:layout_marginBottom="10dp"
                android:text="@string/moodboard"
                android:textColor="@android:color/white"
                android:textSize="20dp"
                android:background="@color/colorPrimary"
             />


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="vertical">


                <ImageView
                    android:id="@+id/imageView2"
                    android:layout_width="380dp"
                    android:layout_height="480dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp" />

                <ImageView
                    android:id="@+id/imageView3"
                    app:srcCompat="@android:color/white"
                    android:layout_width="380dp"
                    android:layout_height="430dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp" />

                <ImageView
                    android:id="@+id/imageView4"
                    app:srcCompat="@android:color/white"
                    android:layout_width="380dp"
                    android:layout_height="430dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp" />


                <ImageView
                    android:id="@+id/imageView5"
                    app:srcCompat="@android:color/white"
                    android:layout_width="380dp"
                    android:layout_height="430dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp" />

                <ImageView
                    android:id="@+id/imageView6"
                    app:srcCompat="@android:color/white"
                    android:layout_width="380dp"
                    android:layout_height="430dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp" />

                <ImageView
                    android:id="@+id/imageView7"
                    app:srcCompat="@android:color/white"
                    android:layout_width="380dp"
                    android:layout_height="430dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp" />

                <ImageView
                    android:id="@+id/imageView8"
                    app:srcCompat="@android:color/white"
                    android:layout_width="380dp"
                    android:layout_height="430dp"
                    android:layout_marginLeft="8dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp" />

                <ImageView
                    android:id="@+id/imageView9"
                    app:srcCompat="@android:color/white"
                    android:layout_width="380dp"
                    android:layout_height="430dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp" />

                <ImageView
                    android:id="@+id/imageView10"
                    app:srcCompat="@android:color/white"
                    android:layout_width="380dp"
                    android:layout_height="430dp"
                    android:layout_marginLeft="2dp"
                    android:layout_marginTop="2dp"
                    android:layout_marginRight="2dp"
                    android:layout_marginBottom="2dp" />

            </LinearLayout>

        </LinearLayout>

    </ScrollView>

</FrameLayout>